# aana_chat_with_video

./: Dockerfile  README.md  app.dstack.yaml  docker-compose.yaml  install.sh  pyproject.toml  volume.dstack.yaml
.devcontainer/: devcontainer.json
.github/: rename_project.sh
.github/workflows/: rename_project.yaml  tests.yml
aana_app_project/: app.py
aana_app_project/configs/: endpoints.py  settings.py
aana_app_project/core/prompts/: loader.py
aana_app_project/exceptions/: core.py
aana_chat_with_video/: app.py
aana_chat_with_video/alembic/: env.py
aana_chat_with_video/alembic/versions/: 7da69bf375e7_init.py  b9860676dd49_set_server_default_for_task_completed_.py  d93a90261ee5_added_extended_video.py
aana_chat_with_video/configs/: deployments.py  endpoints.py  settings.py
aana_chat_with_video/core/models/: video_status.py
aana_chat_with_video/core/prompts/: loader.py  test.j2
aana_chat_with_video/endpoints/: delete_video.py  get_video_status.py  index_video.py  load_video_metadata.py  video_chat.py
aana_chat_with_video/exceptions/: core.py
aana_chat_with_video/storage/: op.py
aana_chat_with_video/storage/models/: __init__.py  extended_video.py
aana_chat_with_video/storage/repository/: extended_video.py  extended_video_caption.py  extended_video_transcript.py
aana_chat_with_video/tests/: conftest.py  test_app.py  test_extended_video_caption_repo.py  test_extended_video_repo.py  test_extended_video_transcript_repo.py
aana_chat_with_video/utils/: core.py
