[tool.poetry]
name = "aana_app_project"
version = "0.1.0"
description = "project_description"
authors = ["author_name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aana = ">=0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
